--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 .bg-yellow {
+    overflow: hidden;
     height: 957px;
     text-align: center;
     color: #fff;
@@ -28,4 +29,18 @@ body {
 
 #tip {
     margin-top: 60px;
+}
+
+@media only screen and (max-width: 1024px) {
+    #tip {
+        max-height: 580px;
+        overflow: auto
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    #tip {
+        max-height: 500px;
+        overflow: auto
+    }
 }
